Enabling message in response body

--- a/spring-boot-expert/src/main/resources/application.properties
+++ b/spring-boot-expert/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.password=123
 spring.jpa.properties.hibernate.show_sql=true
 #Se true, formata os sql's quebrando as linhas
 #spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
