--- a/spring-boot-expert/src/main/resources/application.properties
+++ b/spring-boot-expert/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+
+security.jwt.expiration=30
+security.jwt.subscription.key=dGVzdGUgZGUgc2VndXJhbsOnYQ==
