--- a/spring-boot-expert/src/main/resources/application-test.properties
+++ b/spring-boot-expert/src/main/resources/application-test.properties
@@ -1,13 +1,14 @@
 spring.application.name=Spring Boot Expert Course
 
 # Configuração do BD H2
+spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:mysql://localhost:3306/SALES?useTimezone=true&serverTimezone=UTC
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=admin123
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=SA
+spring.datasource.password=123
 
 #Deixando as consultas que o JPA utiliza visiveis:
 spring.jpa.properties.hibernate.show_sql=true
